--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "server": "nodemon baclend/server.js"
+    "server": "nodemon baclend/server.js",
+    "client": "npm start --prefix frontend"
   },
   "author": "Riley Underwood",
   "license": "ISC",
