--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "final-project",
   "version": "1.0.0",
-  "description": "Hopefully what wil end up becoming my music app for my ACA Class.",
+  "description": "Hopefully what will end up becoming my music app for my ACA Class.",
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
